# Stellar

./: 01-System-Architecture.md  04-Soroban-Overview.md  05-Contract-Specifications.md  08-DeFi-Wallet-System.md  09-Wallet-Plus-System.md  12-Fiat-Integration.md  16-Zero-Knowledge-Proofs.md  20-API-Reference.md  API-Reference.md  Contract-Specifications.md  Moneygram-Integration.md  README.md  Soroban Smart Contracts Overview.md  Soroban-Smart-Contracts-Overview.md  System-Architecture.md  TECHNICAL_ARCHITECTURE.md  Technical-Architecture.md  Wallet-Plus Cross Border Settlements.md  ZK Proofs.md
Contracts/: Cargo.toml
Contracts/insurance-claim/: Cargo.toml
Contracts/insurance-policy/: Cargo.toml
Docs/: Contract-Specifications.md  Fiat-Currencies.md  Soroban-Setup.md  System-Architecture.md  Technical-Architecture.md
app/Models/: OracleEvent.php  StellarSmartContract.php
app/Services/: CustodialAddressService.php  DefiSmartContractService.php  DefiWalletAuditService.php  DefiWalletService.php  NonCustodialWalletService.php  PriceFeedService.php  StellarAssetRegistryService.php  StellarClaimService.php  StellarPaymentService.php  StellarPolicyService.php  StellarSdkContractService.php  StellarSecurityService.php  (+3 more)
contracts/insurance-claim/: Cargo.toml
contracts/insurance-claim/src/: contract.rs  storage.rs  test.rs
contracts/insurance-claim/test_snapshots/test/: parametric_claim_payout_marks_claim_paid_and_records_payment.1.json
scripts/: deploy_mainnet_contracts.sh
tests/: StellarCommandTest.php  StellarIntegrationTest.php  StellarTrustlineTest.php
(+47 files in other folders)
