[package]
name = "insurance-claim"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }
insurance-shared = { path = "../shared" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
insurance-payment = { path = "../insurance-payment" }
insurance-policy = { path = "../insurance-policy" }
